[package]
name = "sdusrun"
version = "0.4.6"
authors = ["zu1k <i@lgf.im>"]
edition = "2021"
description = "SRun authentication system login tools"
readme = "README.md"
homepage = "https://github.com/zu1k/sdusrun"
repository = "https://github.com/zu1k/sdusrun"
license = "GPL-3.0"
exclude = [".github/"]


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"


[dependencies]
base64 = { git = "https://github.com/marshallpierce/rust-base64.git" }
getopts = "0.2"
hmac = "0.12"
lazy_static = "1.4"
md-5 = "0.9"
pnet_datalink = "0.28"
quick-error = "2.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9"


[features]
default = []
tls = ["reqwest/rustls-tls"]
