[package]
name = "sdusrun"
version = "0.5.4"
authors = ["zu1k <i@lgf.im>"]
edition = "2021"
description = "Srun authentication system login tools"
readme = "README.md"
homepage = "https://github.com/zu1k/sdusrun"
repository = "https://github.com/zu1k/sdusrun"
license = "GPL-3.0"
exclude = [".github/"]


[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"


[dependencies]
base64 = "0.20.0-alpha"
getopts = "0.2"
hmac = "0.12"
if-addrs = "0.7"
lazy_static = "1.4"
md-5 = "0.10"
quick-error = "2.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10"
ureq = { git = "https://github.com/zu1k/ureq.git", branch = "connector", default-features = false, optional = true }
socket2 = "0.4"

[features]
default = ["ureq"]
tls = ["ureq-rust-tls"]

# ureq
ureq-rust-tls = ["ureq", "ureq/tls"]
ureq-native-tls = ["ureq", "ureq/native-tls"]
# reqwest
reqwest-rust-tls = ["reqwest", "reqwest/rustls-tls"]
reqwest-native-tls = ["reqwest", "reqwest/default-tls"]
